--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "sharp": "^0.34.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "convert-svg-to-png": "^0.6.4",
+    "svgo": "^3.3.2"
   }
 }
