--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
@@ -18,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.27.0",
+    "firebase": "^11.7.3",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
